fix(slider): remove stray z-index and fix start/end label overflow (#1149)
* Initial plan

* fix(slider): correct z-index and start/end marker label overflow


* fix(slider): render step markers before progress-bar so thumb paints on top


---------

--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -18,7 +18,6 @@
     position: absolute;
     height: 4px;
     border-radius: 1rem;
-    z-index: 2;
     &-liner {
       background-color: $color-primary;
     }
@@ -33,7 +32,6 @@
       height: 1rem;
       border-radius: 1rem;
       background-color: $color-primary;
-      z-index: 0;
 
       &::before {
         content: '';
@@ -77,6 +75,17 @@
     border-bottom-right-radius: 1rem;
     & .label-step {
       margin-top: 1rem;
+      white-space: nowrap;
+    }
+    &.step--first {
+      justify-content: flex-start;
+    }
+    &.step--last {
+      & .label-step {
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
     }
   }
 }
